--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Specify filepatterns you want git to ignore.
 **/__pycache__
+**/theme*
 **/.git
-**/_*
-**/*.pyc# Specify filepatterns you want git to ignore.
+**/*.pyc
+**/.idea
+**/.ipynb_checkpoints
